# spot

./: datasets.py  pyproject.toml  train_spot.py  train_spot_2.py
.dvc/: config
checkpoints/: .gitignore  spot_clevrtex_checkpoint.pt.dvc  spot_coco_checkpoint.pt.tar.dvc  spot_movi_e_checkpoint.pt.dvc
