[project]
name = "spot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.16"
dependencies = [
    "absl-py==1.4.0",
    "einops==0.6.0",
    "protobuf==3.19.6",
    "pycocotools==2.0.6",
    "scipy==1.9.1",
    "six==1.16.0",
    "tensorboard==2.11.2",
    "timm==0.9.2",
    "torch==1.13.1",
    "torchmetrics==0.11.4",
    "torchvision==0.14.1",
    "tqdm==4.64.1",
]

[dependency-groups]
dev = [
    "dvc[s3]>=3.59.1",
]
